검색기능추가

--- a/src/main/resources/templates/new_destination.html
+++ b/src/main/resources/templates/new_destination.html
@@ -22,6 +22,12 @@
             <input type="submit" value="Save" />
         </div>
     </form>
+
+    <form action="/search" method="get">
+        <input type="text" name="keyword" placeholder="Search for destinations" />
+        <button type="submit">Search</button>
+    </form>
+    
     <a href="/">Back to Home</a>
 </body>
 </html>
